# mandrid

./: .gitignore  AGENTS.md  Cargo.toml  MANDRID_PLAN.md  README.md  cli.py  debug.py  flake.nix  install.sh  mem-local  shell.nix
.github/workflows/: release.yml
docs/: roadmap.md
src/: chunker.rs  dashboard.html  db.rs  main.rs  task.rs
temp_logs/: 0_Publish for ubuntu-latest.txt  1_Publish for windows-latest.txt  2_Create GitHub Release.txt
temp_logs/Create GitHub Release/: 1_Set up job.txt  2_Create release.txt  3_Complete job.txt  system.txt
temp_logs/Publish for ubuntu-latest/: 10_Upload binaries to release.txt  18_Post Rust cache.txt  19_Post Setup Cachix.txt  1_Set up job.txt  20_Post Run actions_checkout@v4.txt  21_Complete job.txt  2_Run actions_checkout@v4.txt  3_Install Nix.txt  4_Setup Cachix.txt  5_Install Rust.txt  6_Rust cache.txt  7_Install protoc.txt  8_Build with Nix (Linux_macOS).txt  9_Build with Cargo (all platforms).txt  system.txt
temp_logs/Publish for windows-latest/: 10_Upload binaries to release.txt  19_Post Rust cache.txt  1_Set up job.txt  20_Post Run actions_checkout@v4.txt  21_Complete job.txt  2_Run actions_checkout@v4.txt  5_Install Rust.txt  6_Rust cache.txt  7_Install protoc.txt  9_Build with Cargo (all platforms).txt  system.txt
