[package]
name = "mem"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
fastembed = { version = "5.8.1", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-load-dynamic"] }
futures = "0.3"
lancedb = "0.23.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"

# These are used directly for schema / result decoding.
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
