[package]
name = "mem"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
fastembed = { version = "5.8.1", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-load-dynamic"] }
futures = "0.3"
lancedb = "0.23.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
ignore = "0.4"
rayon = "1.10"
notify = "6"
lsp-server = "0.7"
lsp-types = "0.95"

# These are used directly for schema / result decoding.
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
chrono = "0.4.43"
streaming-iterator = "0.1.9"
tree-sitter-typescript = "0.23.2"
